Fix summary outline shrink-wrapping in Firefox
The styling for <summary> on GOV.UK currently expects the focus ring to shrinkwrap the text. This works fine in Chrome and Safari, but fails in Firefox.

This removes the old workaround to get the arrows to show in Firefox. It then reimplements the arrows for everyone using counters. There is a potential problem that browsers that understand `counter` but not `<details>` might get another arrow in addition to the one generated by the polyfill. As luck would have it though, the list styles `disclosure-open` and `disclosure-closed` seem to have been invented for the details element, so the versions of Edge and IE that I tried this fix in don’t recognise the `::before`/`::after` `content` rules and don’t show them.

Tested in latest Firefox / Chrome / Safari / Edge and IE11. Has not been tested on mobile, other browsers or with assistive tech.

--- a/assets/sass/elements/_details.scss
+++ b/assets/sass/elements/_details.scss
@@ -11,6 +11,7 @@ details {
     cursor: pointer;
     position: relative;
     margin-bottom: em(5);
+    counter-reset: summary-closed;
 
     &:hover {
       color: $link-hover-colour;
@@ -19,6 +20,18 @@ details {
     &:focus {
       outline: 3px solid $focus-colour;
     }
+
+    &::before {
+      content: counter(summary-closed, disclosure-closed) " ";
+    }
+  }
+
+  &[open] > summary {
+    counter-reset: summary-open;
+  }
+
+  &[open] > summary::before {
+    content: counter(summary-open, disclosure-open) " ";
   }
 
   // Underline only summary text (not the arrow)
